--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <h2>Hogwarts family day</h2>
             <article>
                 <span>
-                    В&nbsp; Хогвартсе был проведён Hogwarts family day: студенты, преподаватели и
+                    В&nbsp;Хогвартсе был проведён Hogwarts family day: студенты, преподаватели и
                     сотрудники имели возможность привести в стены университете членов своей семьи, в том числе и животных!
                     Студенты смогли показать близким учебные аудитории и свои комнаты, а преподаватели и сотрудники провели рабочий день со своей семьей.
                     Некоторые из участников этого дня поделились снимками.
                 </span>
                 <div class="media-family-day">
-                    <video src="videos/cat.mp4" muted autoplay loop></video>
+                    <video src="videos/cat.mp4" width="480" muted autoplay loop></video>
                     <img src="images/students_and_cat.png" alt="Студенты стоят в Хогвартсе" height="854">
                 </div>
             </article>
